add fetchPitConfig as an authenticated route
